# NRWellProject

./: CMakeLists.txt
BoostParts/: CMakeLists.txt
nrlib/iotools/: CMakeLists.txt
nrlib/well/: CMakeLists.txt
well_UnitTests/: CMakeLists.txt  wellBasicTest.cpp
